Fixing spacing

--- a/style.css
+++ b/style.css
@@ -328,7 +328,7 @@ input:checked+.slider:before {
 .justified-grid-gallery {
     --space: .1425em;
     --max-canvas-width: calc(100vw - 2em - var(--scrollbar-width));
-    --leader-image-width: min(22em, calc((var(--max-canvas-width) - 4 * var(--space)) / 4));
+    --leader-image-width: min(22em, calc((var(--max-canvas-width) - 8 * var(--space)) / 4));
 }
 
 .leader {
@@ -337,8 +337,9 @@ input:checked+.slider:before {
     justify-content: center;
     width: var(--leader-image-width);
     height: var(--leader-image-width);
-    margin: var(--space);
-    transition: width .4s, margin .4s;
+    margin: 0 var(--space);
+    opacity: 1;
+    transition: width .4s, margin .4s, opacity .4s;
 }
 
 .justified-grid-gallery {
